--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,1 +1,22 @@
 /*datos personales Alejandro Rivada Rodríguez UO295528*/  
+
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background-color: #1F4B4E;
+}
+
+header
+{
+    text-align: center;
+    background-color: #4DA9A6;
+    color: #D3C4B9;
+}
+
+h2 
+{
+    padding: 1em;
+}
+
+nav{
+    color:#D3C4B9;
+}
