--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color: #1F4B4E;
+    background-color: #54d8d4;
 }
 
 header
