--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -2,13 +2,13 @@
 
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color: #54d8d4;
+    background-color: #3c9996;
 }
 
 header
 {
     text-align: center;
-    background-color: #4DA9A6;
+    background-color: #32bcb7;
     color: #D3C4B9;
 }
 
