--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -78,7 +78,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     border: 3px solid black;
-    background-color:#5d61df;
+    background-color:#8D8FE7;
   }
 
 td {
